[tool.poetry]
name = "new_version"
version = "0.1"
description = ""
authors = ["ZeKoder <dev@zekoder.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
requests = "~2.28"

# only when data section is there
pydantic = {extras = ["email"], version = "^1.10.4"}
sqlalchemy = '^1.2, !=1.2.9, < 1.4'
psycopg2-binary = "^2.9.3"
mongosql = "^2.0.15.post1"
dapr = "^1.8.3"

[tool.poetry.group.test`]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
