[tool.poetry]
name = "new_version"
version = "0.1"
description = ""
authors = ["ZeKoder <dev@zekoder.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
requests = "~2.28"

# only when data section is there
pydantic = {extras = ["email"], version = "^1.10.4"}
SQLAlchemy = "^1.4"
psycopg2-binary = "^2.9.3"
mongosql = {git = "https://github.com/Ali-Albayrak/My-Mongosql.git"}
dapr = "^1.8.3"
asyncpg = "^0.28.0"
httpx = "^0.25.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
